--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
   "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
+    "antd": "^5.7.0",
+    "axios": "^1.4.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.8.1",
+    "fs": "^0.0.1-security",
+    "gapi-script": "^1.2.0",
+    "moment": "^2.29.4",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sql.js": "^1.6.2"
+    "react-scripts": "^5.0.1",
+    "sql.js": "^1.6.2",
+    "stream-browserify": "^3.0.0",
+    "styled-components": "^6.0.3"
   },
   "devDependencies": {
     "@craco/craco": "^5.9.0",
