--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.8.1",
+    "eslint-webpack-plugin": "^4.0.1",
     "fs": "^0.0.1-security",
     "gapi-script": "^1.2.0",
     "moment": "^2.29.4",
