--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "antd": "^5.7.0",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
